# tauri.svelte.esp.trans

./: package-lock.json  package.json  tsconfig.json
resources/: settings.json  trans.sqlite
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/adam/: Cargo.toml
src-tauri/adam/src/: lib.rs  main.rs  models.rs
src-tauri/com_helper/: Cargo.toml
src-tauri/com_helper/src/: lib.rs  main.rs
src-tauri/rusqlite_helper/src/: deleting.rs  funcs.rs  lib.rs  reading.rs  writing.rs
src-tauri/serial_handler/: Cargo.toml
src-tauri/serial_handler/src/: lib.rs  main.rs
src-tauri/src/: commands.rs  commands_adam.rs  commands_com.rs  commands_db.rs  main.rs
src-tauri/src/database/: mod.rs  models_tmpn.rs
src-tauri/src/hardware/: mod.rs
src/configs/: cfg_application.js  cfg_hipot.js  cfg_ixx.js  cfg_localization.js  cfg_menu.js  cfg_rohms.js
src/database/: DatabaseHelper.js  db_funcs.js  db_models.js  db_tables.js
src/lib/: AppHeader.svelte  Protocol copy.svelte  Protocol.svelte  ROhm.svelte  Record.svelte  Settings.svelte  TableList.svelte  TestChart.svelte  TestControls.svelte  TestHipot.svelte  TestIxx.svelte  TestPress.svelte  TestROhm.svelte
src/lib/Chart/: BiChart.svelte  Chart.svelte  LogChart.svelte  chart.ts
src/lib/Components/: Button.svelte  Modal.svelte  Slider.svelte  (+1 more)
src/shared/: config.js  funcs.ts  serialPort.ts  types.ts
src/stores/: database.ts  equipment.ts  results.ts  settings.ts  testing.ts
src/testing/: temp.ts  testing_hipot.ts  testing_ixx.ts  testing_power.ts  testing_press.ts  testing_rohms.ts
(+6 files in other folders)
